<resources>
    <string name="app_name">BuyStuff</string>
    <string name="nickname">Nickname</string>
    <string name="settings_btn">Navigate to user settings</string>
    <string name="nicknameEditText">Input Nickname</string>
    <string name="save">Save</string>
    <string name="input">Input</string>
    <string name="no_input">no input</string>
</resources>